--- a/styles/style.css
+++ b/styles/style.css
@@ -6,49 +6,39 @@ body {
   text-align: center;
   font-family: Helvetica, sans-serif;
 }
-/*
-#blue-track {
-  position: absolute;
-  top: 15%;
-  left: 5%;
-  width: 1000px;
-  height: 100px;
-}
 
-#red-track {
-  position: absolute;
-  top: 30%;
-  left: 5%;
-  width: 1000px;
-  height: 100px;
-}*/
+img {
+  opacity: .7;
+}
 
 #blue-dot {
   position: absolute;
   top: 15%;
   left: 10%;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
 }
 
 #red-dot {
   position: absolute;
   top: 30%;
   left: 10%;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
 }
 
-#yellow-dot {
+/*#yellow-dot {
   position: absolute;
   top: 45%;
   left: 10%;
   width: 200px;
   height: 200px;
-}
+}*/
 
-img {
-  opacity: .7;
+#finish-line {
+  position: absolute;
+  border-left: dashed 2px;
+  left: 50%;
 }
 
 .btn {
