--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ img {
 
 #blue-dot {
   position: absolute;
-  top: 100px;
+  top: 50px;
   left: 50px;
   width: 250px;
   height: 250px;
@@ -21,20 +21,26 @@ img {
 
 #red-dot {
   position: absolute;
-  top: 200px;
+  top: 150px;
   left: 50px;
   width: 250px;
   height: 250px;
 }
 
 #track {
-  position: fixed;
+
   width: 1300px;
-  height: 500px;
-  top: 100px;
+
+
+}
+
+#results-box {
+
 }
 
 .btn {
   position: fixed;
+  top: 600px;
+  left: 50px;
   width: 100px;
 }
