added conditional for piece movements

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,10 +45,10 @@ font-size: 20px;
   left: 1200px;
 }
 
-/*.btn {
+.btn {
   position: fixed;
   top: 500px;
   left: 50px;
   margin-top: 10px;
   font-size: 20px;
-}*/
+}
